# aar

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  extension.toml  pyproject.toml  requirements.txt
.agent/: rules.md
agent/: __init__.py
agent/core/: agent.py  config.py  events.py  guardrails.py  logging.py  loop.py  loop_helpers.py  multimodal.py  pricing.json  provider_runner.py  session.py  state.py  tokens.py
agent/extensions/: __init__.py  api.py  loader.py  manager.py  mcp.py  observability.py
agent/extensions/contrib/: companion.py
agent/memory/: session_store.py
agent/providers/: _thinking.py  anthropic.py  base.py  gemini.py  generic.py  ollama.py  openai.py
agent/safety/: permissions.py  policy.py  sandbox.py  wsl_manager.py
agent/tools/: execution.py  registry.py  schema.py
agent/tools/builtin/: acp_terminal.py  filesystem.py  shell.py
agent/transports/: acp.py  acp_permissions.py  cli.py  companion_state.py  keybinds.py  prompt_queue.py  stream.py  tui.py  tui_fixed.py  web.py
agent/transports/acp/: __init__.py  common.py  (+2 more)
config/: README.md
config/distros/: alpine-base.json  alpine-r.json  ubuntu.json
config/rules/: rules.md
config/samples/: config_claude.json  config_deepseek.json  config_gemini_25_flash.json  config_gemini_25_pro.json  config_gemma.json  config_gemma_cost_sim.json  config_omnicoder.json  config_openai.json  config_qwen.json  config_reference.json  config_terminalbench20.json
data/themes/: example_full.json
docs/: aar_deep_dive.html  acp.md  agent_loop.md  architecture.md  companion.md  configuration.md  development.md  extensions.md  mcp.md  prompting.md  providers.md  providers_gemini.md  safety.md  sandbox_architecture.md  themes.md  tokens.md  web-api.md
docs/ideas/: rules.md
docs/testplans/: plan.md
scripts/benchmarks/: README.md  install_terminal_bench.sh
scripts/release/: build_packages.sh
scripts/zed/: build_archives.sh  launch.cmd  launch.sh
tests/: conftest.py  test_acp.py  test_acp_wire.py  test_cli.py  test_companion.py  test_config.py  test_config_defaults.py  test_events.py  test_extensions.py  test_keybinds.py  test_log_viewer.py  test_logging.py  test_loop.py  test_mcp.py  test_multimodal.py  test_observability.py  test_prompt_queue.py  test_prompt_queue_tui.py  test_provider_switch.py  test_providers.py  test_safety.py  test_session.py  test_themes.py  test_tokens.py  test_tools.py  test_tui_extension_commands.py  test_wsl_sandbox.py
tests/live/: test_plan_execution.py
tools/: mcp_config.json  mcp_signal.json  mcp_web.json
tools/gitlab_mcp/: README.md  gitlab_client.py  server.py
tools/signal_mcp/: .env.example  README.md  __main__.py  auth.py  claude_desktop_config.example.json  config.py  logging_config.py  pyproject.toml  requirements.txt  server.py  signal_client.py
tools/web_mcp/: README.md  requirements.txt  server.py  test_mcp.py  test_web_client.py  web_client.py
(+20 files in other folders)
