[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aar-agent"
version = "0.2.0"
description = "Aar — Adaptive Action & Reasoning Agent framework"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.0"]
ollama = ["httpx>=0.27"]
generic = ["httpx>=0.27"]
mcp = ["mcp>=1.0"]
tui-fixed = ["textual>=0.80"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-textual-snapshot>=0.4",
    "ruff>=0.5",
]
all = ["anthropic>=0.40", "openai>=1.0", "httpx>=0.27", "mcp>=1.0", "textual>=0.80"]

[project.scripts]
aar = "agent.transports.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
