[project]
name = "aar-agent"
version = "0.3.2"
description = "Aar — Adaptive Action & Reasoning Agent framework"
readme = "README.md"
requires-python = ">=3.12.2"
dependencies = [
    "pydantic>=2.12.5",
    "httpx>=0.28.1",
    "typer>=0.24.1",
    "rich>=14.3.4",
    "textual>=8.2.3",
	"textual-speedups==0.2.1",
    "jsonschema>=4.0.0",
]

[build-system]
requires = ["hatchling==1.28.0"]
build-backend = "hatchling.build"

[project.optional-dependencies]
anthropic = ["anthropic>=0.94.0"]
openai = ["openai>=2.31.0"]
ollama = ["httpx>=0.28.1"]
generic = ["httpx>=0.28.1"]
mcp = ["mcp>=1.27.0"]
acp = ["agent-client-protocol>=0.9.0"]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.10",
]
all = ["anthropic>=0.94.0", "openai>=2.31.0", "httpx>=0.28.1", "mcp>=1.27.0", "agent-client-protocol>=0.9.0"]

[project.scripts]
aar = "agent.transports.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.hatch.build.targets.wheel.force-include]
"config/distros" = "agent/data/distros"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
